# ROS2_BLDC

./: .gitignore  COMPLETE_CHECKLIST.md  GIT_SETUP_GUIDE.md  README.md
docs/: git_setup_guide.md  hardware_setup.md  software_setup.md
refboard_base/: CMakeLists.txt  package.xml
refboard_base/include/: mks_can_interface.hpp  mks_protocol.hpp
refboard_base/src/: mks_can_interface.cpp  mks_protocol.cpp
refboard_base/test/: test_mks_can.cpp  test_motor_simple.cpp
refboard_ros2_control/: CMakeLists.txt  README.md  package.xml  refboard_hardware_interface.xml
refboard_ros2_control/config/: refboard_controllers.yaml
refboard_ros2_control/description/: refboard_robot.urdf.xacro  refboard_ros2_control.xacro
refboard_ros2_control/include/: refboard_hardware_interface.hpp
refboard_ros2_control/launch/: refboard_ros2_control.launch.py
refboard_ros2_control/src/: refboard_hardware_interface.cpp
scripts/: install_dependencies.sh  setup_can.sh  test_system.sh
